[workspace]
members = [
    ".",
    "weavetui_derive",
    "weavetui_core",
]

[package]
name = "weavetui"
version = "0.1.2"
edition = "2024"
authors = ["Val <alviandtm@gmail.com>"]
description = "A modern, robust, and modular Text User Interface (TUI) framework for Rust."
license = "MIT"
repository = "https://github.com/mzyui/weavetui"
homepage = "https://github.com/mzyui/weavetui"
documentation = "https://docs.rs/weavetui"
keywords = ["tui", "component", "ui", "framework", "weavetui"]
categories = ["gui", "command-line-interface"]

[lib]
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "time", "macros"] }
strum = { version = "0.27.2", features = ["derive"] }
futures-util = "0.3.31"
tokio-util = "0.7.16"
ratatui = "0.29.0"
weavetui_derive = { version = "0.1.1", path = "./weavetui_derive" }
weavetui_core = { version = "0.1.1", path = "./weavetui_core" }
anyhow = "1.0.99"

[[example]]
name = "counter_app"
path = "examples/counter_app.rs"


