[package]
name = "weavetui_core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "time", "macros"] }
strum = { version = "0.27.2", features = ["derive"] }
futures-util = "0.3.31"
tokio-util = "0.7.16"
ratatui = "0.29.0"
anyhow = "1.0.99"

[[example]]
name = "simple_component"
path = "../examples/weavetui_core_simple_component.rs"
