[package]
name = "weavetui_core"
version = "0.1.0"
edition = "2021"
description = "Core traits and utilities for weavetui TUI framework."
license = "MIT"
repository = "https://github.com/mzyui/weavetui"
homepage = "https://github.com/mzyui/weavetui"
documentation = "https://docs.rs/weavetui_core"
keywords = ["tui", "component", "ui", "weavetui"]
categories = ["gui", "command-line-interface"]

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "time", "macros"] }
strum = { version = "0.27.2", features = ["derive"] }
futures-util = "0.3.31"
tokio-util = "0.7.16"
ratatui = "0.29.0"
anyhow = "1.0.99"
downcast-rs = "2.0.1"


