[package]
name = "weavetui_derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for weavetui components."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mzyui/weavetui"
homepage = "https://github.com/mzyui/weavetui"
documentation = "https://docs.rs/weavetui_derive"
keywords = ["tui", "component", "ui", "weavetui", "macro", "derive"]
categories = ["development-tools::procedural-macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"

[dependencies]
weavetui_core = { version = "0.1.0" }

[[example]]
name = "basic_component"
path = "../examples/weavetui_derive_basic_component.rs"
