[package]
name = "weavetui_derive"
version = "0.1.1"
edition = "2024"
authors = ["Val <alviandtm@gmail.com>"]
description = "Procedural macro for weavetui components."
license = "MIT"
repository = "https://github.com/mzyui/weavetui"
homepage = "https://github.com/mzyui/weavetui"
documentation = "https://docs.rs/weavetui_derive"
keywords = ["tui", "component", "ui", "weavetui", "macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"

weavetui_core = { version = "0.1.1" }
